fix: :sparkles: mensajes y excepciones